--- a/Bootstrap/app/Resources/views/Szablony/login.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/login.html.twig
@@ -26,7 +26,7 @@
                         {{ form_errors(form.zapamietajmnie) }}
                     {{ form_end(form) }}
                 </div>
-                <a href="#" class="text-center new-account">Stwórz konto</a>
+                <a href="{{ path('Register') }}" class="text-center new-account">Stwórz konto</a>
             </div>
         </div>
     </div>
