--- a/Bootstrap/app/Resources/views/Szablony/noweogloszenie.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/noweogloszenie.html.twig
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
 
-            <h3 class="sub-header">Podstawowe informacje</h3>
+            <h3 class="">Podstawowe informacje</h3>
             <div class="col-xs-6">
                     <div class="form-group">
                     <span class="badge">*</span>
