--- a/Bootstrap/app/Resources/views/Szablony/register.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/register.html.twig
@@ -1,1 +1,68 @@
 {% extends 'base.html.twig' %}
+
+{% block body %}
+    {% stylesheets '@AppBundle/Resources/css/register.css*' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+    {% form_theme form 'bootstrap_3_layout.html.twig' %}
+
+    <div class="container">
+        {{ form_start(form, {'attr': {'class': 'form-horizontal style-form', 'role': 'form'}}) }}
+        <div class="row">
+            <div class="page-header">
+                <h2>Rejestracja</h2>
+            </div>
+                <div class="row">
+                    <div class="col-sm-4 col-md-3 col-md-offset-4">
+                            <div class="form-group">
+                                {{ form_label(form.email, 'Email:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.email, {'attr': {'class':'form-control' }}) }}
+                                    {{ form_errors(form.email) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.haslo, 'Hasło:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.haslo, {'attr': {'class':'form-control' }}) }}
+                                    {{ form_errors(form.haslo) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.imie, 'Imie:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.imie, {'attr': {'class':'form-control' }}) }}
+                                    {{ form_errors(form.imie) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.nazwisko, 'Nazwisko:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.nazwisko, {'attr': {'class':'form-control'}}) }}
+                                    {{ form_errors(form.nazwisko) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.dataurodzenia, 'Data urodzenia:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.dataurodzenia, {'attr': {'class':''}}) }}
+                                    {{ form_errors(form.dataurodzenia) }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.telefon, 'Numer telefonu:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
+                                <div class="col-sm-8">
+                                    {{ form_widget(form.telefon, {'attr': {'class':'form-control'}}) }}
+                                    {{ form_errors(form.telefon) }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">
+                                    Stwórz konto</button>
+                            </div>
+                    </div>
+                </div>
+         </div>
+        {{ form_end(form) }}
+    </div>
+{% endblock %}
