--- a/Bootstrap/app/Resources/views/Szablony/login.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/login.html.twig
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
     {% form_theme form 'bootstrap_3_layout.html.twig' %}
-    <div class="container">
+    <div class="container" id="kontener">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
                 <div class="account-wall">
