--- a/Bootstrap/app/Resources/views/Szablony/register.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/register.html.twig
@@ -2,67 +2,189 @@
 
 {% block body %}
     {% stylesheets '@AppBundle/Resources/css/register.css*' filter='cssrewrite' %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
+    <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
+
+
     {% form_theme form 'bootstrap_3_layout.html.twig' %}
 
-    <div class="container">
-        {{ form_start(form, {'attr': {'class': 'form-horizontal style-form', 'role': 'form'}}) }}
+
+    <div class="container" id="kontener">
         <div class="row">
-            <div class="page-header">
-                <h2>Rejestracja</h2>
-            </div>
-                <div class="row">
-                    <div class="col-sm-4 col-md-3 col-md-offset-4">
-                            <div class="form-group">
-                                {{ form_label(form.email, 'Email:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.email, {'attr': {'class':'form-control' }}) }}
-                                    {{ form_errors(form.email) }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.haslo, 'Hasło:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.haslo, {'attr': {'class':'form-control' }}) }}
-                                    {{ form_errors(form.haslo) }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.imie, 'Imie:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.imie, {'attr': {'class':'form-control' }}) }}
-                                    {{ form_errors(form.imie) }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.nazwisko, 'Nazwisko:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.nazwisko, {'attr': {'class':'form-control'}}) }}
-                                    {{ form_errors(form.nazwisko) }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.dataurodzenia, 'Data urodzenia:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.dataurodzenia, {'attr': {'class':''}}) }}
-                                    {{ form_errors(form.dataurodzenia) }}
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.telefon, 'Numer telefonu:', {'label_attr': {'class': 'col-md-4 control-label '}}) }}
-                                <div class="col-sm-8">
-                                    {{ form_widget(form.telefon, {'attr': {'class':'form-control'}}) }}
-                                    {{ form_errors(form.telefon) }}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <button class="btn btn-lg btn-primary btn-block" type="submit">
-                                    Stwórz konto</button>
-                            </div>
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="page-header">
+                    <h2>Rejestracja</h2>
+                </div>
+                {{ form_start(form, {'attr': {'class': 'form-horizontal', 'role': 'form', 'id':'defaultForm'}}) }}
+                <div class="form-group">
+                    {{ form_label(form.imie, 'Imie i nazwisko:', {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                    <div class="col-sm-4">
+                        {{ form_widget(form.imie, {'attr': {'class':'form-control' }}) }}
+                        {{ form_errors(form.imie) }}
+                    </div>
+                    <div class="col-sm-4">
+                        {{ form_label(form.nazwisko) }}
+                        {{ form_widget(form.nazwisko, {'attr': {'class':'form-control'}}) }}
+                        {{ form_errors(form.nazwisko) }}
                     </div>
                 </div>
-         </div>
-        {{ form_end(form) }}
+
+                <div class="form-group">
+                    {{ form_label(form.nazwauzytkownika, 'Nazwa użytkownika:', {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                    <div class="col-sm-5">
+                        {{ form_widget(form.nazwauzytkownika, {'attr': {'class':'form-control'}}) }}
+                        {{ form_errors(form.nazwauzytkownika) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(form.email, 'Adres Email:', {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                    <div class="col-sm-5">
+                        {{ form_widget(form.email, {'attr': {'class':'form-control' }}) }}
+                        {{ form_errors(form.email) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(form.haslo, 'Hasło:', {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                    <div class="col-sm-5">
+                        {{ form_widget(form.haslo, {'attr': {'class':'form-control' }}) }}
+                        {{ form_errors(form.haslo) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(form.telefon, 'Numer telefonu:', {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+                    <div class="col-sm-5">
+                        {{ form_widget(form.telefon, {'attr': {'class':'form-control' }}) }}
+                        {{ form_errors(form.telefon) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(form.captcha, ' ', {'label_attr': {'class': 'col-sm-3 control-label', 'id':'captchaOperation'}}) }}
+                    <div class="col-sm-2">
+                        {{ form_widget(form.captcha, {'attr': {'class':'form-control' }}) }}
+                        {{ form_errors(form.captcha) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-6 col-sm-offset-3">
+                        <div class="checkbox">
+                            {{ form_label(form.akceptacja, 'Akceptuje regulamin serwisu', {'label_attr': {'class': 'col-sm-3 control-label', 'id':'captchaOperation'}}) }}
+                            {{ form_widget(form.akceptacja, {'attr': {'class':'' }}) }}
+                            {{ form_errors(form.akceptacja) }}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-9 col-sm-offset-3">
+                        <button type="submit" class="btn btn-primary btn-lg" name="signup" value="Sign up">Załóż konto</button>
+                    </div>
+                </div>
+                {{ form_end(form) }}
+            </div>
+        </div>
     </div>
+    <script>
+        $(document).ready(function() {
+            // Generate a simple captcha
+            function randomNumber(min, max) {
+                return Math.floor(Math.random() * (max - min + 1) + min);
+            };
+            $('#captchaOperation').html([randomNumber(1, 100), '+', randomNumber(1, 200), '='].join(' '));
+
+            $('#defaultForm').formValidation({
+                message: 'This value is not valid',
+                icon: {
+                    valid: 'glyphicon glyphicon-ok',
+                    invalid: 'glyphicon glyphicon-remove',
+                    validating: 'glyphicon glyphicon-refresh'
+                },
+                fields: {
+                    firstName: {
+                        row: '.col-sm-4',
+                        validators: {
+                            notEmpty: {
+                                message: 'The first name is required'
+                            }
+                        }
+                    },
+                    lastName: {
+                        row: '.col-sm-4',
+                        validators: {
+                            notEmpty: {
+                                message: 'The last name is required'
+                            }
+                        }
+                    },
+                    username: {
+                        message: 'The username is not valid',
+                        validators: {
+                            notEmpty: {
+                                message: 'The username is required'
+                            },
+                            stringLength: {
+                                min: 6,
+                                max: 30,
+                                message: 'The username must be more than 6 and less than 30 characters long'
+                            },
+                            regexp: {
+                                regexp: /^[a-zA-Z0-9_\.]+$/,
+                                message: 'The username can only consist of alphabetical, number, dot and underscore'
+                            }
+                        }
+                    },
+                    email: {
+                        validators: {
+                            notEmpty: {
+                                message: 'The email address is required'
+                            },
+                            emailAddress: {
+                                message: 'The input is not a valid email address'
+                            }
+                        }
+                    },
+                    password: {
+                        validators: {
+                            notEmpty: {
+                                message: 'The password is required'
+                            },
+                            different: {
+                                field: 'username',
+                                message: 'The password cannot be the same as username'
+                            }
+                        }
+                    },
+                    gender: {
+                        validators: {
+                            notEmpty: {
+                                message: 'The gender is required'
+                            }
+                        }
+                    },
+                    captcha: {
+                        validators: {
+                            callback: {
+                                message: 'Wrong answer',
+                                callback: function(value, validator, $field) {
+                                    var items = $('#captchaOperation').html().split(' '), sum = parseInt(items[0]) + parseInt(items[2]);
+                                    return value == sum;
+                                }
+                            }
+                        }
+                    },
+                    agree: {
+                        validators: {
+                            notEmpty: {
+                                message: 'You must agree with the terms and conditions'
+                            }
+                        }
+                    }
+                }
+            });
+        });
+    </script>
 {% endblock %}
