--- a/Bootstrap/app/Resources/views/Szablony/noweogloszenie.html.twig
+++ b/Bootstrap/app/Resources/views/Szablony/noweogloszenie.html.twig
@@ -288,6 +288,13 @@
                         </div>
              </div>
          </div>
+        <div class="col-xs-6">
+            <div class="form-group">
+                <div class="col-sm-9 col-sm-offset-3">
+                    <button type="submit" class="btn btn-primary btn-lg" name="signup" value="Sign up">Wystaw ogłoszenie</button>
+                </div>
+            </div>
+        </div>
 
 
         {{ form_end(form) }}
